# jsonRVM

./: .gitignore  .travis.yml  Advantages and benefits of the jsonRVM project.md  BaseVoc.cpp  BaseVoc.h  CLAUDE.md  CMakeLists.template.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  LICENSE.MIT  README.md  ReadMe.txt  _abbreviations_8md.html  _advantages_01and_01benefits_01of_01the_01json_r_v_m_01project_8md.html  _c_l_a_u_d_e_8md.html  _dictionary_8md.html  _introduction_8md.html  _introduction_8md_source.html  _l_i_c_e_n_s_e_8md.html  _mathematical__definition_8md.html  _mathematical__definition_8md_source.html  _r_e_a_d_m_e_8md.html  _r_m_8md.html  _r_v_m_8md.html  _xD0_xBF_xD0_xBB_xD0_xB0_xD0_xBD___xD0_x9C_xD0_x9E_8md.html  analysis.md  analysis_8md.html  annotated.html  annotated_dup.js  arm2_8json.html  arm2_8json_source.html  arm3_8json.html  arm3_8json_source.html  arm4_8json.html  arm4_8json_source.html  arm_8json.html  arm_8json_source.html  base_8rm_8h.html  (+402 more)
.github/workflows/: publish.yml  rocq-proofs.yml
doc/: Abbreviations.md  Dictionary.md  Introduction.md  Mathematical_definition.md  RM.md  RVM.md  add_one.amr.json  amr.json  amr2.json  arm.json  arm2.json  arm3.json  arm4.json  array.dot  eosr.json  json_array.plantuml  json_definition.md  math_description.md  regen.dot.bat  relations-model-en.md  relations-model-ru.md  rmodel.md  tree_stack_of_contexts.dot  usefull_signs.md  usefull_signs.txt  wiki_concepts.md  план_МО.md  план_МО.txt
examples/: 1+1.bat  1+1.json  ToXML.test.bat  ToXML.test.json  fs.rm.test.bat  fs.rm.test.json  http_POST_xml_SMS.bat  http_POST_xml_SMS.json  http_POST_xml_SMS2.bat  imgui.rm.json  new.json  test.all.bat  version.bat  version.json
examples/node/: anker_approve.json  payment.json
fs.rm/: ReadMe.txt  fs.rm.cpp  fs.rm.h  fs.rm.vcxproj  fs.rm.vcxproj.filters  stdafx.cpp
http.rm/: http.rm.cpp  http.rm.vcxproj  http.rm.vcxproj.filters  stdafx.cpp  stdafx.h
imgui.rm/: imgui.rm.vcxproj  main.cpp
modules/: CMakeLists.txt
modules/common/include/: database_api.h  help.rm.h  interface.h  jsonRVM.h  string_type.h  string_utils.h  type_map.h  vm.rm.h
modules/common/include/str_switch/: str_switch.h
modules/console/: CMakeLists.txt
modules/console/include/: base.rm.h  dll.rm.h  file_database.h
modules/console/src/: main.cpp
modules/console/test/: #.arm.json  CMakeLists.txt  ToXML.test.json  absolute_addressing.bat  absolute_addressing.json  ent1  ent1.json  ent2.json  fs.rm.test.json  hello.json  http_POST_xml_SMS2.json  imgui.rm.json  main.cpp  performance.bat  performance.json  relative_addressing.bat  relative_addressing.json  throw.amr.test.json  throw.rose.test.json  version.bat  version.json  version.rose.json  where_test.json  where_test.rose.json
modules/vocabulary/: CMakeLists.txt
modules/vocabulary/fs/: CMakeLists.txt
modules/vocabulary/fs/include/: fs.rm.h
modules/vocabulary/fs/src/: fs.rm.cpp
modules/vocabulary/http/: CMakeLists.txt  ReadMe.txt  http.rm.cpp  http.rm.vcxproj
modules/vocabulary/http/include/: http.rm.h
modules/vocabulary/http/src/: dllmain.cpp  http.rm.cpp
modules/vocabulary/http/test/: CMakeLists.txt  main.cpp
modules/vocabulary/imgui/: imgui.rm.vcxproj  imgui.rm.vcxproj.filters  imgui_impl_glfw_gl3.cpp  main.cpp
proofs/rocq/: Makefile  README.md  RelationsModel.v  _CoqProject
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+132 more)
src/: CMakeLists.txt
src/trmvm/: CMakeLists.txt
src/trmvm/include/: base.rm.h  database_api.h  file_database.h  jsonRVM.h
src/trmvm/src/: main.cpp
src/trmvm/test/: .gitignore  2781659109896.json  CMakeLists.txt  ToXML.test.json  absolute_addressing.json  catch.test.json  ent2  file_database_test.json  main.cpp  performance.bat  performance.json  relative_addressing.json  throw.test.json  version.bat  version.json
src/trmvm/test/node/: anker_payment.json  approve.json
test/: CMakeLists.txt  ToXML.test.bat  ToXML.test.json  catch.test.json  fs.rm.test.bat  fs.rm.test.json  http_POST_xml_SMS.bat  http_POST_xml_SMS.json  http_POST_xml_SMS2.bat  imgui.ini  imgui.rm.bat  imgui.rm.json  throw.test.json  version.bat  version.json
tests/: .gitignore  CMakeLists.txt  http.rm.server.bat  http.rm.server.json  http.rm.test.bat  http.rm.test.json  http_POST_xml_SMS.bat  http_POST_xml_SMS.json  http_POST_xml_SMS2.bat  throw.test.json
utils/: open.base.json.bat
